# epanet-solver

./: .gitignore  BUILDING.md  Build.md  CMakeLists.txt  CONTRIBUTING.md  EPANET_QAPP.md  LICENSE.txt  README.md  ReleaseNotes.md  ReleaseNotes2_2.md  appveyor.yml  make.cmd
.github/workflows/: build-and-test.yml
bindings/: CMakeLists.txt
doc/: CMakeLists.txt  main.dox  modules.dox  output.dox  toolkit-files.dox  toolkit-usage.dox
include/: epanet2_2.h
outfile/: CMakeLists.txt
outfile/include/: epanet_output.h
run/: CMakeLists.txt
scripts/: Reg_Testing.md  Testing.md  app-config.cmd  before-nrtest.cmd  make.cmd  requirements-appveyor.txt  run-nrtest.cmd
shared/: CMakeLists.txt
solver/: CMakeLists.txt  input2.c
solver/include/: epanet2_enums.h
src/: CMakeLists.txt  epanet.c
src/outfile/: CMakeLists.txt  epanet_output.c
src/outfile/include/: epanet_output.h  epanet_output_enums.h
src/outfile/src/: epanet_output.c
src/run/: CMakeLists.txt
src/shared/: CMakeLists.txt  cstr_helper.h  errormanager.c  errormanager.h  filemanager.c  filemanager.h
src/solver/: CMakeLists.txt  epanet.c  input2.c  input3.c  project.c
src/solver/include/: epanet2_2.h  epanet2_enums.h
src/util/: CMakeLists.txt
tests/: CMakeLists.txt  Testing.md  Unit_Testing.md
tests/outfile/: CMakeLists.txt  test_output.cpp
tests/shared/: CMakeLists.txt
tests/solver/: CMakeLists.txt  test_hydraulics.cpp
tests/util/: CMakeLists.txt
tools/: Testing.md  before-nrtest.cmd  before-test.cmd  requirements-appveyor.txt  run-nrtest.cmd  test-config.cmd  tests
